Sun Jun 19 02:29:46 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* eval.c (ruby_vm_cleanup): Threads shall be terminated in this
	  function, rather than in thread.c

	* thread.c (thread_start_func_2): ditto.

	* thread.c (thread_terminated_1): You cannot assume a VM existance
	  here.  If there are some VMs that are joining this VM, and the
	  thread is the main thread, then this thread had signaled the CV
	  that other threads are waiting.  And other VMs might already
	  freed the VM struct when this thread reaches at this function.

	* thread.c (ruby_threadptr_cleanup): ditto.

	* vm.c (ruby_reset_vm_context): ditto.

Sun Jun 19 01:36:49 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (vm_free): oops, double free.

	* vm.c (ruby_vmptr_destruct): This point might be reached without
	  a main thread (i.e. graceful shoutdown), so we cannot assume
	  main thread's existance.

Sun Jun 19 00:48:54 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vmptr_destruct): When a VM is about to be destructed,
	  there are already no execution context for that VM.  So
	  rb_objspace_free, which might invoke finalizers, shall not be
	  called here.

	* eval.c (ruby_vm_cleanup): proper cleanup by goto & return idiom.

	* eval.c (vm_finalize_i): There might not always be VM
	  initializations happend.  A VM which was not started has no main
	  thread for instance.

	* vm.c (vm_free): The main VM would call this function to free
	  itself, via rb_objspace_free.  But that should not destruct the
	  main VM, because the VM is just doing that job at that moment.

Sun Jun 19 00:27:26 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (vm_set_timer_interrupt): should also check VM state.

Sat Jun 18 23:12:20 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* intervm.c (ruby_vm_join): Now RubyVM#join checks its state
	  rather than its main VM.

	* eval.c (ruby_vm_cleanup): global_vm_waiting shall be signaled.
