@@ -2253,11 +2253,13 @@ int
 rb_thread_alone(void)
 {
     int num = 1;
-    if (GET_THREAD()->vm->living_threads) {
-	num = vm_living_thread_num(GET_THREAD()->vm);
-	thread_debug("rb_thread_alone: %d\n", num);
+    if (GET_THREAD()->vm) {
+        if (GET_THREAD()->vm->living_threads) {
+            num = vm_living_thread_num(GET_THREAD()->vm);
+            thread_debug("rb_thread_alone: %d\n", num);
+        }
     }
-    return num == 1;
+    return num <= 1;
 }
 
 /*
